--- a/trivela/style.css
+++ b/trivela/style.css
@@ -289,7 +289,6 @@
 html {
   scroll-behavior:smooth;
   font-size:16px;
-  overflow-x: hidden;
   max-width: 100%;
 }
 body {
